AccessGenerationState::emitExplicitExceptionHandler can clobber an in use register https://bugs.webkit.org/show_bug.cgi?id=197715 <rdar://problem/50399252>

Reviewed by Filip Pizlo.

JSTests:

* stress/polymorphic-access-exception-handler-should-not-clobber-used-register.js: Added.
(foo):
(bar):

Source/JavaScriptCore:

AccessGenerationState::emitExplicitExceptionHandler was always clobbering
x86's r9 without considering if that register was needed to be preserved
by the IC. This leads to bad things when the DFG/FTL need that register when
OSR exitting after an exception from a GetById call.

* b3/air/AirCode.cpp:
(JSC::B3::Air::Code::Code):
* bytecode/PolymorphicAccess.cpp:
(JSC::AccessGenerationState::emitExplicitExceptionHandler):
* runtime/Options.h:


Canonical link: https://commits.webkit.org/211863@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245084 268f45cc-cd09-0410-ab3c-d52691b4dbfc